# ChangeLog for app-admin/prelude-lml
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/prelude-lml/Attic/ChangeLog,v 1.16 2005/07/24 22:32:28 vanquirius Exp $

*prelude-lml-0.9.0_rc5 (24 Jul 2005)

  24 Jul 2005; Marcelo Goes <vanquirius@gentoo.org>
  +prelude-lml-0.9.0_rc5.ebuild:
  Version bump.

  22 Jul 2005; David Holm <dholm@gentoo.org> prelude-lml-0.9.0_rc4.ebuild:
  Added to ~ppc.

*prelude-lml-0.9.0_rc4 (26 May 2005)

  26 May 2005; Marcelo Goes <vanquirius@gentoo.org>
  -prelude-lml-0.9.0_rc1.ebuild, -prelude-lml-0.9.0_rc3.ebuild,
  +prelude-lml-0.9.0_rc4.ebuild:
  Version bump.

*prelude-lml-0.9.0_rc3 (07 May 2005)

  07 May 2005; Marcelo Goes <vanquirius@gentoo.org>
  +prelude-lml-0.9.0_rc3.ebuild:
  Version bump.

  10 Apr 2005; Marcelo Goes <vanquirius@gentoo.org>
  prelude-lml-0.9.0_rc1.ebuild:
  Fix DEPEND. Needs libprelude-0.9.0_rc1.

*prelude-lml-0.9.0_rc1 (01 Apr 2005)

  01 Apr 2005; Marcelo Goes <vanquirius@gentoo.org>
  +prelude-lml-0.9.0_rc1.ebuild:
  Version bump, bug 87408. Thanks Carlos Silva <r3pek@gentoo.org>.

  17 Apr 2004; Jason Wever <weeve@gentoo.org> prelude-lml-0.8.6.ebuild:
  Stable on sparc.

  18 Mar 2004; Jason Wever <weeve@gentoo.org> prelude-lml-0.8.6.ebuild:
  Added ~sparc keyword.

  17 Jan 2004; Michael Boman <mboman@gentoo.org> files/gentoo.init:
  Made init script less verbose

*prelude-lml-0.8.6 (17 Nov 2003)

  17 Nov 2003; Michael Boman <mboman@gentoo.org> prelude-lml-0.8.6.ebuild:
  New upstream version.
  Added "debug" USE flag to faciliate debugging.

*prelude-lml-0.8.5 (14 Oct 2003)

  14 Oct 2003; <solar@gentoo.org> prelude-lml-0.8.5.ebuild:
  prelude updates. contribution made by anonymous user

  30 Jun 2003; <solar@gentoo.org> prelude-lml-0.8.3-r1.ebuild:
  small fix for -doc option when used. No revision bump needed

*prelude-lml-0.8.3-r1 (28 Jun 2003)
