@@ -1,1 +1,0 @@
-MD5 17c5fc91e5011773de1eae03b80df95b prelude-manager-0.9.0-rc5.tar.gz 529706
