@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/prelude-manager
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/prelude-manager/Attic/ChangeLog,v 1.20 2005/07/02 09:33:11 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/prelude-manager/Attic/ChangeLog,v 1.21 2005/07/29 02:25:01 vanquirius Exp $
+
+  29 Jul 2005; Marcelo Goes <vanquirius@gentoo.org>
+  -prelude-manager-0.9.0_rc5.ebuild:
+  Removing old version.
 
   02 Jul 2005; David Holm <dholm@gentoo.org>
   prelude-manager-0.9.0_rc6.ebuild:
